# near-multisig-sdk

./: .gitignore  Cargo.toml  EXAMPLES.md  INITIALIZATION.md  LICENSE  README.md  SECURITY.md  regenerate_templates.py  update_cli_templates.sh
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: build.rs  init.rs  mod.rs  verify.rs
lib/: Cargo.toml
lib/src/: build_manifest.rs  checksum.rs  lib.rs
scripts/: README.md  approve.sh  multisig.sh  submit.sh  view-pending.sh
templates/: README.md
templates/basic/contract/: .audit-context.md  .pre-audit-report.json  Cargo.toml  README.md  build.sh
templates/basic/contract/src/: lib.rs  storage.rs  types.rs  validation.rs
templates/basic/frontend/: .env.example  README.md  package.json
templates/basic/frontend/app/: layout.tsx  page.tsx
templates/basic/frontend/components/: TransactionCard.tsx  TransactionList.tsx  WalletConnect.tsx
templates/basic/frontend/utils/: contract.ts  near.ts
templates/timelock/contract/: Cargo.toml  README.md  build.sh
templates/timelock/contract/src/: lib.rs
templates/timelock/frontend/: .env.example  README.md  package.json
templates/timelock/frontend/app/: layout.tsx  page.tsx
templates/timelock/frontend/components/: TransactionCard.tsx  TransactionList.tsx
templates/timelock/frontend/utils/: contract.ts  near.ts
templates/weighted/contract/: Cargo.toml  README.md  build.sh
templates/weighted/contract/src/: lib.rs
templates/weighted/frontend/: README.md  next.config.js  package.json
templates/weighted/frontend/app/: layout.tsx  page.tsx
templates/weighted/frontend/components/: TransactionCard.tsx  TransactionList.tsx  WalletConnect.tsx
templates/weighted/frontend/utils/: contract.ts  near.ts
(+2 files in other folders)
