[package]
name = "near-multisig"
version = "0.1.0"
edition = "2021"
authors = ["ShadowCorp"]
description = "CLI tool for creating and managing NEAR multisig smart contracts"
license = "MIT"
repository = "https://github.com/ShadowCorp-Dev/near-multisig-sdk"
keywords = ["near", "blockchain", "multisig", "smart-contract"]

[[bin]]
name = "near-multisig"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
near-multisig-lib = { path = "../lib" }
