[package]
name = "near-multisig-lib"
version = "0.1.0"
edition = "2021"
authors = ["ShadowCorp"]
description = "Core library for NEAR multisig smart contract utilities"
license = "MIT"
repository = "https://github.com/ShadowCorp-Dev/near-multisig-sdk"
keywords = ["near", "blockchain", "multisig", "wasm"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
anyhow = "1.0"
