[package]
name = "basic-multisig"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.24.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
overflow-checks = true

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.18.0-rust-1.86.0"
image_digest = "sha256:2d0d458d2357277df669eac6fa23a1ac922e5ed16646e1d3315336e4dff18043"
container_build_command = ["cargo", "near", "build", "reproducible-wasm"]
